--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ numpy==2.2.4
 packaging==25.0
 pydantic==2.11.4
 pydantic_core==2.33.2
+PyPDF2==3.0.1
 PyYAML==6.0.2
 requests==2.32.3
 scikit-learn==1.6.1
@@ -38,3 +39,4 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 Werkzeug==3.1.3
+python-magic==0.4.27
